force-app/main/default/objects/Rate__c/Rate__c.object-meta.xml
<CustomObject>
    <label>Rate</label>
    <nameField>
        <displayFormat>RT{000000}</displayFormat>
        <label>Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>