force-app/main/default/objects/Rate__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <label>Rate</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>