force-app/main/default/objects/Rate__c/fields/Time_Of_Day_Week__c.field-meta.xml
<CustomField>
    <fullName>Time_Of_Day_Week__c</fullName>
    <label>Time Of Day/Week</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekday Daytime</fullName>
            </value>
            <value>
                <fullName>Weekday Evening</fullName>
            </value>
            <value>
                <fullName>Weekend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>